<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ARTIK_Cloud_Camera_Controller</string>
    <string name="login_request_text">Please login to ARTIK Cloud</string>
    <string name="button_login_text">Login</string>
    <string name="button_makePhoto">Make Photo</string>
    <string name="button_start_recording">Start Recording</string>
    <string name="button_stop_recording">Stop Recording</string>

    <string name="device_name">Device Name</string>
    <string name="device_id">Device ID</string>
    <string name="device_status">Device Status</string>
    <string name="status_update_time">Status Update Time</string>
    <string name="action_settings">Settings</string>
    <string name="websocketlive_status">WebSocket /live status</string>

    <string name="device_monitor_title">Home Device</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_states">Unknown states</string>
    <string name="unknown_update_time">Unknown update time</string>

    <string name="websocketws_status">WebSocket /websocket status</string>
    <string name="websocketws_received">/websocket received msg or ack are here...</string>
</resources>